--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./minecraft/">Minecraft</a>
+                        <a class="nav-link" href="minecraft/">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#fortnite">Fortnite</a>
+                        <a class="nav-link" href="Fortnite/">Fortnite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#worldoftanks">World of Tanks</a>
+                        <a class="nav-link" href="worldoftanks/">World of Tanks</a>
                     </li>
                     <!-- Další hry -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#apexlegends">Apex Legends</a>
+                        <a class="nav-link" href="apexlegend">Apex Legends</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#cyberpunk2077">Cyberpunk 2077</a>
+                        <a class="nav-link" href="cyberpunk2077/">Cyberpunk 2077</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#thedivision2">The Division 2</a>
+                        <a class="nav-link" href="osu/">Osu!</a>
                     </li>
                 </ul>
             </div>
@@ -144,15 +144,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-            <h2><b>The Division 2</b></h2>
-            <p>The Division 2 je online akční RPG hra vyvinutá společností Massive Entertainment a vydána v roce 2019.
-                Hra se odehrává v postapokalyptickém Washingtonu, D.C., kde hráči hrají za člena tajné divize agentů,
-                kteří bojují proti zločinu a obnovují pořádek. Hra nabízí kooperativní a soutěžní režimy, rozsáhlý
-                vybavení a taktickou hratelnost.</p>
+            <h2><b>Osu!</b></h2>
+            <p>Osu! je populární rytmická hra, která kombinuje hudbu, rychlost a precizní klikání. Hráči se musí synchronizovat s různými hudebními skladbami a klikat na objekty, které se objevují na obrazovce. Tyto objekty mohou zahrnovat kruhy, skluzavky nebo posuvná kolečka, která se pohybují podle rytmu hudby. Cílem je dosáhnout co nejlepšího skóre tím, že správně a přesně klikáte na tyto objekty v souladu s hudbou.</p>
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="theDivision2.jpg" alt="TheDivision2" class="game-image">
+                <img src="osu.jpg" alt="Osu" class="game-image">
             </div>
         </div>
     </div>
