--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Minecraft</title>
 </head>
 
@@ -23,20 +23,20 @@
                         <a class="nav-link" href="#">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="fortnite.html">Fortnite</a>
+                        <a class="nav-link" href="../fortnite/">Fortnite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="worldoftanks.html">World of Tanks</a>
+                        <a class="nav-link" href="../worldoftanks/">World of Tanks</a>
                     </li>
                     <!-- Další hry -->
                     <li class="nav-item">
-                        <a class="nav-link" href="apexlegends.html">Apex Legends</a>
+                        <a class="nav-link" href="../apexlegends/">Apex Legends</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cyberpunk2077.html">Cyberpunk 2077</a>
+                        <a class="nav-link" href="../cyberpunk2077/">Cyberpunk 2077</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="thedivision2.html">The Division 2</a>
+                        <a class="nav-link" href="../osu/">The Division 2</a>
                     </li>
                 </ul>
             </div>
@@ -47,45 +47,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="https://picsum.photos/800/400/?random" class="d-block w-100" alt="Minecraft 1">
-                                <div class="carousel-caption">
-                                    <h2 class="carousel-title">Minecraft</h2>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/200/800/?random" class="d-block w-50" alt="Minecraft 2">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/200/800/?random" class="d-block w-100" alt="Minecraft 3">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/800/400/?random" class="d-block w-100" alt="Minecraft 4">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/800/400/?random" class="d-block w-100" alt="Minecraft 5">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </a>
-                    </div>
                     <div class="mt-4">
                         <h3>Popis hry</h3>
                         <p>Minecraft je sandboxová stavební hra s otevřeným světem, ve které hráči mají neomezenou
