--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                         <a class="nav-link" href="minecraft/">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Fortnite/">Fortnite</a>
+                        <a class="nav-link" href="fortnite/">Fortnite</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="worldoftanks/">World of Tanks</a>
                     </li>
                     <!-- Další hry -->
                     <li class="nav-item">
-                        <a class="nav-link" href="apexlegend">Apex Legends</a>
+                        <a class="nav-link" href="apexlegends/">Apex Legends</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cyberpunk2077/">Cyberpunk 2077</a>
