--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="image-wrapper">
-                        <img src="minecraft.jpg" alt="Minecraft" class="game-image">
+                        <img src="Images/minecraft.jpg" alt="Minecraft" class="game-image">
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="fortnite.jpg" alt="Fortnite" class="game-image">
+                <img src="Images/fortnite.jpg" alt="Fortnite" class="game-image">
             </div>
         </div>
     </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="worldOfTanks.jpg" alt="WorldOfTanks" class="game-image">
+                <img src="Images/worldOfTanks.jpg" alt="WorldOfTanks" class="game-image">
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="apexLegends.jpg" alt="ApexLegends" class="game-image">
+                <img src="Images/apexLegends.jpg" alt="ApexLegends" class="game-image">
             </div>
         </div>
     </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="cyberpunk2077.jpg" alt="Cyberpunk2077" class="game-image">
+                <img src="Images/cyberpunk2077.jpg" alt="Cyberpunk2077" class="game-image">
             </div>
         </div>
     </div>
@@ -149,7 +149,7 @@
         </div>
         <div class="col-md-6">
             <div class="image-wrapper">
-                <img src="osu.jpg" alt="Osu" class="game-image">
+                <img src="Images/osu.jpg" alt="Osu" class="game-image">
             </div>
         </div>
     </div>
