--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="minecraft/">Minecraft</a>
+                        <a class="nav-link" href="Minecraft/">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="fortnite/">Fortnite</a>
+                        <a class="nav-link" href="Fortnite/">Fortnite</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="worldoftanks/">World of Tanks</a>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="cyberpunk2077/">Cyberpunk 2077</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="osu/">Osu!</a>
+                        <a class="nav-link" href="Osu!/">Osu!</a>
                     </li>
                 </ul>
             </div>
