--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Minecraft/index.html">Minecraft</a>
+                        <a class="nav-link" href="Minecraft/">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Fortnite/index.html">Fortnite</a>
+                        <a class="nav-link" href="Fortnite/">Fortnite</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="worldoftanks/index.html">World of Tanks</a>
+                        <a class="nav-link" href="worldoftanks/">World of Tanks</a>
                     </li>
                     <!-- Další hry -->
                     <li class="nav-item">
